--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -184,7 +184,7 @@ const navItems = [
         if (menuToggle && menu) {
             menuToggle.addEventListener("click", () => {
                 menu.classList.toggle("hidden");
-                menu.classList.toggle("flex"); // Asegura que se muestra
+                menu.classList.toggle("flex");
             });
         }
 
