--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -138,7 +138,7 @@ const carouselData = [
 <div>
 	<main>
 		<div class="w-full relative">
-			<div class="w-full h-[50vh] md:h-full object-cover md:mt-[80px] z-10">
+			<div class="w-full h-[50vh] md:h-full object-cover  z-10">
 				<CarouselComponent
 					images={Imagenes.map((img) => img.imagen)}
 					client:load
