--- a/src/pages/cours/[cours].astro
+++ b/src/pages/cours/[cours].astro
@@ -176,14 +176,9 @@ const carouselData = [
 
 <Layout>
 	<BigSection id="cursos" class="max-w-7xl">
-		<div class="container py-4 mt-24 mx-auto">
-			<div class="grid grid-cols-1 lg:grid-cols-2 gap-8 lg:items-center">
-				<div class="prose max-w-none md:px-24 px-12">
-					<span
-						class="not-prose items-start mb-4 rounded-full px-3 py-1 text-base font-semibold bg-brownDark text-white ring-1 ring-yellowSecondary flex justify-start w-fit"
-					>
-						benvenuto
-					</span>
+		<div class="container py-4 mt-10 mx-auto">
+			<div class="grid grid-cols-1 mt-5 lg:grid-cols-2 gap-8 lg:items-top">
+				<div class="prose max-w-none md:px-10 px-12">
 					<h2
 						slot="heading-title"
 						class="font-black text-grayDark dark:text-white h2 my-4 text-left"
@@ -213,7 +208,7 @@ const carouselData = [
 								target="_self"
 								rel=""
 							>
-								Book a table
+								Inscrivez- vous
 							</a>
 						</div>
 					</div>
