--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -139,9 +139,7 @@ const navItems = [
                                     <a
                                         href="/cours/cours-grupal"
                                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
-                                        >Cours en Groupe</a
-                                    >
-                                        Cours Groupes
+                                        >Cours en Groupe
                                     </a>
                                 </li>
                                 <li>
